<resources>
    <string name="app_name">PopCorn</string>
    <string name="title_movie">Películas</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Buscar</string>
    <string name="edit_hint_search">Pelicula, Actor, Director...</string>
    <string name="title_popular">Populares</string>
    <string name="see_all">Ver todo</string>
    <string name="title_top_rated">Mejor Valorados</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_dev">Luis Garcia</string>
</resources>