<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".view.MovieFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_search_movie"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/title_search"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/inputSearchMovie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:backgroundTint="@color/colorGray"
            android:ems="10"
            android:foregroundTint="@color/colorGray"
            android:hint="@string/edit_hint_search"
            android:inputType="textPersonName"
            android:textColor="@color/colorGray"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@color/colorGray"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_search_movie" />

        <TextView
            android:id="@+id/txt_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/title_popular"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputSearchMovie" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/see_all"
            android:textAllCaps="true"
            android:textColor="@color/colorGray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_popular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_popular"
            app:layout_constraintVertical_bias="0.79" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerPopularMovies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_popular"
            tools:itemCount="1"
            tools:listitem="@layout/movie_item" />

        <TextView
            android:id="@+id/txt_top_rated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_top_rated"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerPopularMovies" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/see_all"
            android:textAllCaps="true"
            android:textColor="@color/colorGray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_top_rated"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_top_rated"
            app:layout_constraintVertical_bias="0.79" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerTopRatedMovies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_top_rated"
            tools:itemCount="1"
            tools:listitem="@layout/movie_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>